added return button to recipe pages

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -27,5 +27,6 @@
         <li>In a large bowl, cream together the butter and sugar until smooth. Beat in egg and vanilla. Gradually blend in the dry ingredients. Roll rounded teaspoonfuls of dough into balls, and place onto ungreased cookie sheets.</li>
         <li>Bake 8-10 minutes in the preheated oven, or until golden. Let stand on cookie sheet two minutes before removing to cool on wire racks</li>
     </ol>
+    <a href="../index.html">Back to home</a>
 </body>
 </html>
