--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -29,5 +29,6 @@
         <li>In a medium bowl, combine mozzarella, cheddar, and ricotta. Stir well. In a 9x13 inch pan, alternate layers of noodles, meat mixture, and cheese mixture until pan is filled</li>
         <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly</li>
     </ol>
+    <a href="../index.html">Back to home</a>
 </body>
 </html>
