--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian's Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/cookies.html">Sugar Cookies</a></li><br>
         <li><a href="./recipes/protein.html">Protein Shake</a></li><br>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     </ul>
+    </div>
 </body>
 </html>
